-
Bug
-
Resolution: Done
-
Not Evaluated
-
Qt Creator 4.0.0-beta1
-
None
-
linux fedora
-
6ed9ac35be2fa48d009e6cefcbee34ba8ce316d2
Please build the attached example.
Inside your build dir create couple of dirs with special characters, e.g.:
Téléchargements
Jąę
If you run the app from creator, the dir names are displayed OK. When you start debugging it from creator, all special characters are replaced by question marks. If you check the "run in terminal" option and start debugging it again, everything is working OK.
- relates to
-
QTCREATORBUG-8099 qtcreator_process_stub "eats" unicode characters
-
- Reported
-
-
QTCREATORBUG-16024 Locals and Expressions view is empty
-
- Closed
-
-
QTCREATORBUG-15855 Can't compile when path contains special character "é"
-
- Closed
-
| For Gerrit Dashboard: QTCREATORBUG-16010 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 154979,2 | Debugger: Do not change LANG when starting GDB | 4.0 | qt-creator/qt-creator | Status: MERGED | +2 | 0 |