Debugger: Do not change LANG when starting GDB

LC_NUMERIC is enough for the float reporting problem, and
LANG is too intrusive

Task-number: QTCREATORBUG-16010
Task-number: QTCREATORBUG-16024
Task-number: QTCREATORBUG-12800
Change-Id: Ia5bc31152e2b137c6b830a232460542a3827138a
Reviewed-by: Jarek Kobus <jaroslaw.kobus@theqtcompany.com>
Reviewed-by: André Hartmann <aha_1980@gmx.de>